# Ausfaller

./: .env.example  .gitignore  CLAUDE.md  README.md  analysis_metrics.py  batch_status.json  check_progress.py  download_progress.py  main.py  pyproject.toml  railway.toml  requirements.txt  substack_analysis_input.md  test_pipeline.py  test_scrapers.py
.claude/commands/: analyze.md  validate-scores.md
analysis/: ANALYSIS_FRAMEWORK.md  LATEST_ANALYSIS.md  LATEST_ANALYSIS_DATA_ENGINEERING.md  LATEST_ANALYSIS_ENTERTAINMENT.md
config/: scraping_targets.json  settings.py
config/prompts/: analysis.txt  combined.txt  educational.txt
dashboard/: app.js  bartender.html  base.css  data-engineering.html  index.html  styles.css  tracking.js
dashboard/data-engineering/: app.js  styles.css
dashboard/shared/: export.js  nav.js  sparkline.js
n8n-workflows/: README.md  local_webhook.json  scheduled_scrape.json  webhook_scrape.json
scripts/: aggregate_analysis.py  analyze_multivideo.py  analyze_substack_claude.py  analyze_unanalyzed_videos.py  backfill_engagement.py  batch_substack_analysis.py  import_cached_videos.py  push_substack_to_supabase.py  run_batch_analysis.py  run_gemini_analysis.py  scrape_substack.py
social_scraper.egg-info/: SOURCES.txt  requires.txt
src/: __init__.py  utils.py
src/analyzer/: __init__.py  account_comparison.py  gemini.py
src/api/: server.py
src/api/routes/: __init__.py  (+1 more)
src/batch/: __init__.py  analyzer.py  processor.py
src/downloader/: __init__.py  video.py
src/extractor/: __init__.py  hashtag.py  instagram.py  profile.py  substack.py  youtube_shorts.py
src/generator/: __init__.py  hashtag_generator.py
src/scrapers/: __init__.py  base.py  instagram.py  tiktok.py
src/storage/: __init__.py  supabase_client.py
src/utils/: rate_limit.py
(+9 files in other folders)
